--- a/NEWS
+++ b/NEWS
@@ -28,4 +28,5 @@ BUGFIXES:
 017 ==> 398386 - Allow video frame to be saved as picture.
 018 ==> 459969 - Unconfirmed Faces are not grouped correctly when re-running recognition.
 019 ==> 460091 - Original batch still present after modification.
-020 ==> 
+020 ==> 460124 - Unable to acces existing collections.
+021 ==> 
