fix AssignNameOverlay to not overlap thumbnail completely BUGS: 460132 FIXED-IN: 7.9.0

--- a/NEWS
+++ b/NEWS
@@ -29,4 +29,5 @@ BUGFIXES:
 018 ==> 459969 - Unconfirmed Faces are not grouped correctly when re-running recognition.
 019 ==> 460091 - Original batch still present after modification.
 020 ==> 460124 - Unable to acces existing collections.
-021 ==> 
+021 ==> 460132 - Impossible to drag suggested face tag to other face tag in sidebar (for reassignment).
+022 ==> 
