--- a/NEWS
+++ b/NEWS
@@ -32,4 +32,5 @@ BUGFIXES:
 021 ==> 460132 - Impossible to drag suggested face tag to other face tag in sidebar (for reassignment).
 022 ==> 460153 - Deleting an album takes many seconds.
 023 ==> 429709 - Date view suddenly switches to month view.
-024 ==> 
+024 ==> 416524 - Cannot move item inside album or between albums.
+025 ==> 
