--- a/NEWS
+++ b/NEWS
@@ -33,4 +33,5 @@ BUGFIXES:
 022 ==> 460153 - Deleting an album takes many seconds.
 023 ==> 429709 - Date view suddenly switches to month view.
 024 ==> 416524 - Cannot move item inside album or between albums.
-025 ==> 
+025 ==> 370356 - Very slow when delete photos and albums.
+026 ==> 
