--- a/NEWS
+++ b/NEWS
@@ -160,6 +160,6 @@ BUGFIXES:
 122 ==> 438960 - Add support for searching images created in a time interval.
 123 ==> 458082 - MP4 video failed to update metadata timestamp.
 124 ==> 426612 - Highlighting Album in TreeView on mouse over.
-125 ==> 
+125 ==> 331167 - Import images from folder create date based folders from images Exif.
 126 ==> 
 127 ==> 
