--- a/NEWS
+++ b/NEWS
@@ -162,4 +162,12 @@ BUGFIXES:
 124 ==> 426612 - Highlighting Album in TreeView on mouse over.
 125 ==> 331167 - Import images from folder create date based folders from images Exif.
 126 ==> 361467 - Indicate (shade?) drop target when copying or moving images.
-127 ==> 
+127 ==> 388011 - Suggested improvement of Drag&Drop images from one album to another.
+128 ==> 
+129 ==> 
+130 ==> 
+131 ==> 
+132 ==> 
+133 ==> 
+134 ==> 
+135 ==> 
