--- a/AUTHORS
+++ b/AUTHORS
@@ -290,6 +290,7 @@ ABOUT BACKGROUND IMAGE:
 -----------------------
 
 8.0.0          : Thomas Steffen                 <steffenthomas at t-online dot de>
+7.9.0          : Caulier Gilles                 <caulier dot gilles at gmail dot com>
 7.8.0          : Thomas Caswell                 <tcaswell at gmail dot com>
 7.7.0          : Tom Laville                    <laville dot tom16 at gmail dot com>
 7.6.0          : Matthieu Lapadu-Hargues        <mlhpub at free dot fr>>
