--- a/NEWS
+++ b/NEWS
@@ -163,7 +163,7 @@ BUGFIXES:
 125 ==> 331167 - Import images from folder create date based folders from images Exif.
 126 ==> 361467 - Indicate (shade?) drop target when copying or moving images.
 127 ==> 388011 - Suggested improvement of Drag&Drop images from one album to another.
-128 ==> 
+128 ==> 460251 - digiKam git build error.
 129 ==> 
 130 ==> 
 131 ==> 
