--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ NEW FEATURES:
 
 General: Update internal Libraw with snapshot 2002-09-03
 General: Update Exiftool to 12.45 to the bundles.
+MacOS:   Update frameworks Qt5 to 5.15.6 and KF5 to 5.99.
 
 *****************************************************************************************************
 BUGFIXES:
