port Windows build to KF5 5.99

--- a/NEWS
+++ b/NEWS
@@ -3,9 +3,11 @@ digiKam 7.9.0 - Release date: 2022-xx-xx
 *****************************************************************************************************
 NEW FEATURES:
 
-General: Update internal Libraw with snapshot 2002-09-03
-General: Update Exiftool to 12.45 to the bundles.
-MacOS:   Update frameworks Qt5 to 5.15.6 and KF5 to 5.99.
+General  : Update internal Libraw with snapshot 2002-09-03
+General  : Update Exiftool to 12.45 to the bundles.
+MacOS    : Update frameworks Qt5 to 5.15.6 and KF5 to 5.99.
+AppIMage : Update frameworks KF5 to 5.99.
+Windows  : Update frameworks KF5 to 5.99.
 
 *****************************************************************************************************
 BUGFIXES:
