better check for overlapping face regions when importing BUGS: 460321 FIXED-IN: 8.0.0

--- a/NEWS
+++ b/NEWS
@@ -165,7 +165,7 @@ BUGFIXES:
 127 ==> 388011 - Suggested improvement of Drag&Drop images from one album to another.
 128 ==> 460251 - digiKam git build error.
 129 ==> 459027 - Creating large thumbnails issue with digiKam-8.0.0.
-130 ==> 
+130 ==> 460321 - Overlapping faces region.
 131 ==> 
 132 ==> 
 133 ==> 
