--- a/NEWS
+++ b/NEWS
@@ -89,7 +89,7 @@ BUGFIXES:
 051 ==> 453180 - "not valid" dates for video in "Adjust Time & Date".
 052 ==> 453992 - Build error in digiKam Setup.
 053 ==> 453630 - Metadata doesn 't always keep it's hierarchy when written with exiftool.
-054 ==> 426951 - digiKam audio issue.
+054 ==> 426951 - digiKam multimedia issue.
 055 ==> 454318 - Save as Version in Imageeditor not accessible when using external raw editor (rawtherapee).
 056 ==> 324967 - Add support of specific increase numbering offset with advance rename tool.
 057 ==> 453275 - Renaming files is not folder aware, even with folder aware option.
