--- a/NEWS
+++ b/NEWS
@@ -38,4 +38,5 @@ BUGFIXES:
 024 ==> 416524 - Cannot move item inside album or between albums.
 025 ==> 370356 - Very slow when delete photos and albums.
 026 ==> 460464 - "Scan for faces" context menu in Faces view does not trigger scan.
+027 ==> 460629 - "People" top level tag appears in People left hand pane.
 027 ==> 
