--- a/NEWS
+++ b/NEWS
@@ -171,7 +171,7 @@ BUGFIXES:
 133 ==> 457461 - Ability to ignore all faces except tag marked.
 134 ==> 460520 - [FEATURE REQUEST] Ignore rest of not tagged faces in picture.
 135 ==> 460568 - Star rating not saved.
-136 ==> 
+136 ==> 460761 - Recent regression Cannot any more reassign faces by dragging them on the left sidebar items.
 137 ==> 
 138 ==> 
 139 ==> 
