--- a/NEWS
+++ b/NEWS
@@ -175,4 +175,14 @@ BUGFIXES:
 137 ==> 460786 - Freeze for 3-4 seconds after assigning tag to an image.
 138 ==> 446616 - digiKam lags for about 2 - 3 seconds when I assign a Tag.
 139 ==> 461069 - Set album date for new albums to earliest picture date.
-140 ==> 
+140 ==> 461065 - When user mouse over tag list which have been cut off (...) on image thumbnail display all tags in mouse over text.
+141 ==> 
+142 ==> 
+143 ==> 
+144 ==> 
+145 ==> 
+146 ==> 
+147 ==> 
+148 ==> 
+149 ==> 
+150 ==> 
