--- a/NEWS
+++ b/NEWS
@@ -177,7 +177,7 @@ BUGFIXES:
 139 ==> 461069 - Set album date for new albums to earliest picture date.
 140 ==> 461065 - When user mouse over tag list which have been cut off (...) on image thumbnail display all tags in mouse over text.
 141 ==> 405690 - Album date changing automatically without any reason.
-142 ==> 
+142 ==> 416934 - Tags & data disappear after moving images to new folder.
 143 ==> 
 144 ==> 
 145 ==> 
