--- a/NEWS
+++ b/NEWS
@@ -178,7 +178,7 @@ BUGFIXES:
 140 ==> 461065 - When user mouse over tag list which have been cut off (...) on image thumbnail display all tags in mouse over text.
 141 ==> 405690 - Album date changing automatically without any reason.
 142 ==> 416934 - Tags & data disappear after moving images to new folder.
-143 ==> 
+143 ==> 389655 - Sort multiple albums by exif date (not last modified).
 144 ==> 
 145 ==> 
 146 ==> 
