--- a/NEWS
+++ b/NEWS
@@ -179,7 +179,7 @@ BUGFIXES:
 141 ==> 405690 - Album date changing automatically without any reason.
 142 ==> 416934 - Tags & data disappear after moving images to new folder.
 143 ==> 389655 - Sort multiple albums by exif date (not last modified).
-144 ==> 
+144 ==> 196672 - Add new option to setup global preference about default album dating.
 145 ==> 
 146 ==> 
 147 ==> 
