--- a/NEWS
+++ b/NEWS
@@ -45,4 +45,6 @@ BUGFIXES:
 030 ==> 425254 - Face tagging in digiKam: Exiv2 saves [XMP-mwg-rs] with "inf, inf, inf, inf" instead of numbers.
 031 ==> 461197 - English mistranslation in showfoto undo cache free space warning.
 032 ==> 461221 - If Title and Description text is the same, only write one of these two to Google Caption Field to avoid duplication.
-033 ==> 
+033 ==> 459160 - Geolocation Editor maps don’t zoom enough.
+034 ==> 460775 - "TLS initialization failed" error whenever the app tries to download files.
+035 ==> 
