--- a/NEWS
+++ b/NEWS
@@ -182,7 +182,7 @@ BUGFIXES:
 144 ==> 196672 - Add new option to setup global preference about default album dating.
 145 ==> 435925 - Cursor in annotations or comments field jumps around while face detection is running.
 146 ==> 461228 - Face region is removed when people tag is removed via tag panel.
-147 ==> 
+147 ==> 459157 - Open in a File Manager.
 148 ==> 
 149 ==> 
 150 ==> 
