--- a/NEWS
+++ b/NEWS
@@ -49,4 +49,6 @@ BUGFIXES:
 034 ==> 460775 - "TLS initialization failed" error whenever the app tries to download files.
 035 ==> 461257 - digiKam crashes when displaying thumbnails for JP2 files.
 036 ==> 461348 - Does not start because - Failed to update the database schema from version 13 to version 14.
-037 ==> 
+037 ==> 461495 - 'Help' window does not work.
+038 ==> 
+
