--- a/NEWS
+++ b/NEWS
@@ -54,4 +54,5 @@ BUGFIXES:
 039 ==> 458754 - Geolocation of JPEG shown in Map vary of 100 meters from the correct position set in RAW.
 040 ==> 461522 - Geo Localisation differs between two jpg-Files.
 041 ==> 461633 - Using rounded coordinates for map display causes wrong emplacement of picture.
-042 ==> 
+042 ==> 461709 - Maintenance and Scan for New Items options remain disabled after cancelling operation.
+043 ==> 
