--- a/NEWS
+++ b/NEWS
@@ -188,7 +188,7 @@ BUGFIXES:
 150 ==> 461469 - Import file filter not working.
 151 ==> 426786 - Filter with a specific path does not work.
 152 ==> 461504 - Make it possible to create new database without having to delete digikam.rc.
-153 ==> 
+153 ==> 461710 - Extra click required to confirm faces when face tagging a picture.
 154 ==> 
 155 ==> 
 156 ==> 
