--- a/NEWS
+++ b/NEWS
@@ -55,4 +55,5 @@ BUGFIXES:
 040 ==> 461522 - Geo Localisation differs between two jpg-Files.
 041 ==> 461633 - Using rounded coordinates for map display causes wrong emplacement of picture.
 042 ==> 461709 - Maintenance and Scan for New Items options remain disabled after cancelling operation.
-043 ==> 
+043 ==> 461792 - Map view draws only a partial subset of marker pins for images in album subfolders.
+044 ==> 
