--- a/NEWS
+++ b/NEWS
@@ -190,7 +190,7 @@ BUGFIXES:
 152 ==> 461504 - Make it possible to create new database without having to delete digikam.rc.
 153 ==> 461710 - Extra click required to confirm faces when face tagging a picture.
 154 ==> 461799 - No progress is shown for second face recognition process.
-155 ==> 
+155 ==> 461888 - Writing metadata to file fails while database sync process is running.
 156 ==> 
 157 ==> 
 158 ==> 
