--- a/NEWS
+++ b/NEWS
@@ -59,4 +59,5 @@ BUGFIXES:
 044 ==> 461889 - digiKam crashes on close (perhaps properties dialog and/or exiftool).
 045 ==> 461790 - Upload from Digikam 7.8.0 to piwigo 13.1.0 broken.
 046 ==> 462013 - Preferences on application of changes not saved.
-047 ==> 
+047 ==> 462067 - Order by Exif date.
+048 ==> 
