--- a/NEWS
+++ b/NEWS
@@ -97,7 +97,7 @@ BUGFIXES:
 081 ==> 225197 - digiKam crashes each time I try to import new Pics from my Camera (seen as a USB disk).
 082 ==> 225060 - Tried to import pictures from a USB drive.
 083 ==> 424363 - If an album is created with google photos then with digikam we can't add photo to album.
-084 ==> 
+084 ==> 404900 - Exporting video, photo to Google photo fails.
 084 ==> 
 086 ==> 
 087 ==> 
