--- a/NEWS
+++ b/NEWS
@@ -205,5 +205,5 @@ BUGFIXES:
 167 ==> 389814 - Date-based Sub-albums uses modification date instead of metadata date.
 168 ==> 381845 - Import tool creates wrong folder names.
 169 ==> 291189 - GPS Track viewer.
-170 ==> 
+170 ==> 462258 - Cannot preview and play .avi video.
 171 ==> 
