--- a/NEWS
+++ b/NEWS
@@ -101,7 +101,7 @@ BUGFIXES:
 084 ==> 268773 - Crash while Adding Camera.
 086 ==> 269626 - Crash trying to add Camera.
 087 ==> 462286 - HEIF image loading broken with kimageformats 5.100.0.
-088 ==> 
+088 ==> 462137 - Information about applied Gmic-Qt filter not saved (neither in database nor in metadata Xmp.digiKam.ImageHistory).
 089 ==> 
 090 ==> 
 091 ==> 
