--- a/NEWS
+++ b/NEWS
@@ -207,4 +207,8 @@ BUGFIXES:
 169 ==> 291189 - GPS Track viewer.
 170 ==> 462258 - Cannot preview and play .avi video.
 171 ==> 462071 - Last tag cannot be removed if only using xmp.lr and xmp.dc.
-172 ==> 
+172 ==> 462368 - QTAV-library has been removed from unstable.
+173 ==> 
+174 ==> 
+175 ==> 
+
